# AgentKit

./: .coverage.MacBook-Air-M4.pid3439.XPSQsNyx.HNQIp837rWOh  .coverage.MacBook-Air-M4.pid3760.X6aJqf6x.HNQIp837rWOh  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  example_agent.py  example_llm.py  example_memory.py  example_multi_agent.py  example_openapi.py  example_sandbox.py  example_structured_output.py  example_swarm.py  example_tools.py  pyproject.toml
.github/workflows/: publish.yml  release.yml  test.yml
agentkit/: __main__.py  agent.py  cli.py  orchestrator.py
agentkit/llm/: __init__.py  anthropic.py  base.py  groq.py  ollama.py  openai.py
agentkit/memory/: __init__.py  entity.py  long_term.py  short_term.py
agentkit/memory/vector_db/: base.py  chroma.py  pgvector.py  pinecone.py  qdrant.py  weaviate.py
agentkit/server/: app.py
agentkit/server/static/: index.html
agentkit/tools/: __init__.py  base.py  builtins.py  decorator.py  openapi.py
agentkit/tools/integrations/: __init__.py  github.py  notion.py
agentkit/types/: __init__.py  schemas.py
agentkit/utils/: __init__.py  logging.py  observability.py
tests/: conftest.py  test_agent.py  test_builtins.py  test_cli.py  test_edge_cases.py  test_integrations.py  test_llm.py  test_llm_providers.py  test_logging.py  test_memory.py  test_multi_agent.py  test_tools.py
