[tool.poetry]
name = "agentkit"
version = "0.1.0"
description = "A lightweight, transparent, and observable AI agent framework."
authors = ["Arda <email@example.com>"]
readme = "README.md"
repository = "https://github.com/agentkit/agentkit"
homepage = "https://github.com/agentkit/agentkit"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.6.0"
openai = "^1.14.0"
anthropic = "^0.21.0"
httpx = "^0.27.0"
chromadb = ">=0.4.24"
tiktoken = ">=0.6.0"
loguru = "^0.7.2"
duckduckgo-search = "^5.2.0"
aiofiles = "^23.2.1"
sentence-transformers = "^2.6.0"
typer = "^0.12.0"
rich = "^13.7.0"
groq = "^1.2.0"
python-dotenv = "^1.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.0"
pytest-asyncio = "^0.23.5"
mypy = "^1.9.0"
ruff = "^0.3.2"
pytest-cov = "^4.1.0"
black = "^24.2.0"
respx = "^0.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py310"
