[tool.poetry]
name = "agentkit-ai"
version = "0.2.0"
description = "A lightweight, transparent, and observable AI agent framework with multi-agent capabilities."
authors = ["Arda <email@example.com>"]
readme = "README.md"
repository = "https://github.com/agentkit/agentkit"
homepage = "https://github.com/agentkit/agentkit"
keywords = ["ai", "llm", "agent", "multi-agent", "openai", "anthropic", "framework"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
packages = [
    { include = "agentkit" }
]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.6.0"
openai = "^1.14.0"
anthropic = "^0.21.0"
httpx = "^0.27.0"
chromadb = ">=0.4.24"
tiktoken = ">=0.6.0"
loguru = "^0.7.2"
duckduckgo-search = "^5.2.0"
aiofiles = "^23.2.1"
sentence-transformers = "^2.6.0"
typer = "^0.12.0"
nest-asyncio = "^1.6.0"
rich = "^13.7.0"
groq = "^1.2.0"
python-dotenv = "^1.2.2"
PyGithub = { version = "^2.2.0", optional = true }
notion-client = { version = "^2.2.1", optional = true }
fastapi = "^0.136.1"
uvicorn = "^0.46.0"
langfuse = "^4.5.1"

[tool.poetry.extras]
github = ["PyGithub"]
notion = ["notion-client"]
all = ["PyGithub", "notion-client"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.0"
pytest-asyncio = "^0.23.5"
mypy = "^1.9.0"
ruff = "^0.3.2"
pytest-cov = "^4.1.0"
black = "^24.2.0"
respx = "^0.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py310"
